migrate groupId to `io.zenwave360` and update GH actions