@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>io.github.zenwave360.zenwave-sdk</groupId>
+        <groupId>io.zenwave360.sdk</groupId>
         <artifactId>zenwave-sdk</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
@@ -15,57 +15,39 @@
         <skipTests>${e2e.tests.skip}</skipTests>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
-                <configuration>
-                    <argLine>
-                        --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-                        --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-                        --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-                        --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
-            <groupId>io.github.zenwave360.zenwave-sdk</groupId>
+            <groupId>io.zenwave360.sdk</groupId>
             <artifactId>zenwave-sdk-cli</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.zenwave360.zenwave-sdk</groupId>
+            <groupId>io.zenwave360.sdk</groupId>
             <artifactId>zenwave-sdk-test-resources</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.zenwave360.zenwave-sdk.plugins</groupId>
+            <groupId>io.zenwave360.sdk.plugins</groupId>
             <artifactId>zdl-to-openapi</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.zenwave360.zenwave-sdk.plugins</groupId>
+            <groupId>io.zenwave360.sdk.plugins</groupId>
             <artifactId>zdl-to-asyncapi</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.zenwave360.zenwave-sdk.plugins</groupId>
+            <groupId>io.zenwave360.sdk.plugins</groupId>
             <artifactId>backend-application-default</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.zenwave360.zenwave-sdk.plugins</groupId>
+            <groupId>io.zenwave360.sdk.plugins</groupId>
             <artifactId>openapi-controllers</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
